add "serve" target/profile